[project]
name = "pcface"
dynamic = ["version"]
description = "PC Face - Bitmap arrays for all 256 glyphs of CP437"
readme = "src/pypi.md"
license = {text = "MIT"}
keywords = ["font", "cp437", "retro"]
authors = [{name = "Susam Pal"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: JavaScript",
  "Programming Language :: Python :: 3",
  "Topic :: Artistic Software",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Text Processing :: Fonts",
  "Topic :: Utilities"
]
dependencies = [
  "pillow"
]

[project.urls]
homepage = "https://github.com/susam/pcface"

[project.scripts]
pcface = "pcface:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["pcface"]

[tool.setuptools.dynamic]
version = {attr = "pcface.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pcface"]
